cleaning of dataframe started

--- a/scrapper & cleaner.ipynb
+++ b/scrapper & cleaner.ipynb
@@ -203,6 +203,7 @@
     "df['2016 population density_1(/sq mi)']=[s.strip('\\xa0sq\\xa0 /sq mi') for s in df['2016 population density_1(/sq mi)']]\n",
     "df['2016 population density_2(/km2)']=[s.strip('\\xa0sq\\xa0 /km2') for s in df['2016 population density_2(/km2)']]\n",
     "df['Change']=[s.strip('\\xa0sq\\xa0 %') for s in df['Change']]\n",
+    "# df['Location']=[s.strip('ufeff') for s in df['Location']]\n",
     "# df[['2016 land area_1(sq mi)', '2016 land area_2(km2)','2016 population density_1(/sq mi)', '2016 population density_2(/km2)', 'Change']]"
    ]
   },
@@ -1368,6 +1369,26 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'40°39′49″N 73°56′19″W\\ufeff / \\ufeff40.6635°N 73.9387°W\\ufeff / 40.6635; -73.9387\\ufeff (1 New York City)'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Location'][1]"
    ]
   }
  ],
