formated and updated with licence

--- a/scrapper & cleaner.ipynb
+++ b/scrapper & cleaner.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topos assignment\n",
+    "\n",
+    "Below in this notebooks gives the method used to scrap the data from the wikipedia website(link as given below) and to clean and store them. A geographical plot has been plotted based on the geo location (latitude and longitude) that was obtained in the data that was scrapped for better visualization. \n",
+    "\n",
+    "Link -https://en.wikipedia.org/wiki/List_of_United_States_cities_by_population\n",
+    "\n",
+    "The methods used are basic, website scrapping, using BeautifulSoup library. By the end of this notebook being run, there will be a CSV file that will be generated with the data being scrapped and stored(ready to be uploaded to any Data base using the CSV)\n",
+    "\n",
+    "\n",
+    "To plot the geo map on USA, the library used is Basemap. This helps us use the data of latitude and longitude to be plotted on the map. While doing so, there can be issues due to a bug of the toolkit. TO ensure, a work around is as provided to locate the library on the local system. It is commented for initial use. In case, of error throws on PAKG, kindly uncomment it and change the location based on your system and run it. It should be good."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -70,7 +86,7 @@
    "outputs": [],
    "source": [
     "id_check = html_soup.find(\"div\", class_=\"mw-content-ltr\")\n",
-    "# id_check.prettify # uncomment if needed to see the HTML of the page"
+    "id_check.prettify # uncomment if needed to see the HTML of the page"
    ]
   },
   {
@@ -80,7 +96,7 @@
    "outputs": [],
    "source": [
     "tables=id_check.find('table', class_=\"wikitable sortable\")\n",
-    "# tables.prettify # uncomment if needed to see the HTML of the page"
+    "tables.prettify # uncomment if needed to see the HTML of the page"
    ]
   },
   {
@@ -90,7 +106,7 @@
    "outputs": [],
    "source": [
     "rows=tables.find_all('tr')\n",
-    "# rows # uncomment if needed to see the rows"
+    "rows # uncomment if needed to see the rows"
    ]
   },
   {
@@ -111,6 +127,18 @@
    ],
    "source": [
     "len(rows) # verifying the number of rows as per the wikipedia page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fr the ease of working, there are two functions that has been defined in this notebook as below\n",
+    "\n",
+    "### Functions\n",
+    "\n",
+    "* `arr_cleaner` - This function cleans any character that is passed as `char` to it from the array of data passed as `arr`                       and returns the array cleaned of the character\n",
+    "* `clean_html` - This cleans all the major HTML tags from the dataframe when passed as a `df`"
    ]
   },
   {
@@ -174,7 +202,16 @@
     "        txt=re.sub(\"[[]c]\", \"\", txt)\n",
     "        second.append(txt)\n",
     "    csv_rows.append(second)\n",
-    "# print(csv_rows)"
+    "print(csv_rows)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning\n",
+    "\n",
+    "The major cleaning and adjustments starts from here - "
    ]
   },
   {
@@ -230,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df"
+    "df"
    ]
   },
   {
@@ -1464,7 +1501,7 @@
     "# Location III - has location latitude and longitude in third form\n",
     "df[['Location', 'Location_II']] = df['Location'].str.split('\\ufeff / \\ufeff', expand=True)\n",
     "df[['Location_II', 'Location_III']] = df['Location_II'].str.split('\\ufeff / ', expand=True)\n",
-    "# df"
+    "df"
    ]
   },
   {
@@ -1478,7 +1515,7 @@
     "df[\"Location_III\"]=df[\"Location_III\"].str.replace(';' , ' ')\n",
     "df[\"Location_III\"]=df[\"Location_III\"].str.replace('\\(.*?\\)' , '')\n",
     "df[['Location_lat', 'Location_log']] = df['Location_III'].str.split('  ', expand=True)\n",
-    "# df"
+    "df"
    ]
   },
   {
@@ -3047,6 +3084,47 @@
     "    x, y = m(log, lat)\n",
     "    plt.plot(x, y, 'ok', markersize=5)\n",
     "    plt.text(x, y, '',fontsize=5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "Thus, at the end we have data scrapped and cleaned from all the HTML tags that are unnecessary and stored into a data frame that is later exported into a CSV for storing it into a physical database. The CSV file is at the location of the notebook for reference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### License\n",
+    "\n",
+    "MIT License\n",
+    "    \n",
+    "<img src=\"Images/OSI_Approved_License.png\" width=\"100\" align=\"right\"/>\n",
+    "\n",
+    "    \n",
+    "Copyright (c) 2019 Prabhu Subramanian\n",
+    "\n",
+    "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+    "of this software and associated documentation files (the \"Software\"), to deal\n",
+    "in the Software without restriction, including without limitation the rights\n",
+    "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+    "copies of the Software, and to permit persons to whom the Software is\n",
+    "furnished to do so, subject to the following conditions:\n",
+    "\n",
+    "The above copyright notice and this permission notice shall be included in all\n",
+    "copies or substantial portions of the Software.\n",
+    "\n",
+    "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+    "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+    "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+    "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+    "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+    "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+    "SOFTWARE.\n"
    ]
   }
  ],
